# mendeleev-data

./: LICENSE  README.md  mendeleev.dbml  pyproject.toml
data/csv/: elements.csv  groups.csv  ionicradii.csv  ionizationenergies.csv  isotopedecaymodes.csv  isotopes.csv  oxidationstates.csv  phasetransitions.csv  propertymetadata.csv  scattering_factors.csv  screeningconstants.csv  series.csv
data/html/: elements.html  groups.html  ionicradii.html  ionizationenergies.html  isotopedecaymodes.html  isotopes.html  oxidationstates.html  phasetransitions.html  propertymetadata.html  screeningconstants.html  series.html
data/json/: elements.json  groups.json  ionicradii.json  ionizationenergies.json  isotopedecaymodes.json  isotopes.json  oxidationstates.json  phasetransitions.json  propertymetadata.json  screeningconstants.json  series.json
data/markdown/: elements.markdown  groups.markdown  ionicradii.markdown  ionizationenergies.markdown  isotopedecaymodes.markdown  isotopes.markdown  oxidationstates.markdown  phasetransitions.markdown  propertymetadata.markdown  scattering_factors.markdown  screeningconstants.markdown  series.markdown
